Fix other three playlist views, stop invisible drop targets still taking up space

--- a/app/style/index.less
+++ b/app/style/index.less
@@ -109,7 +109,8 @@ Styling for the main part of the app.
 	// top: 100%; // move offscreen
 	// visibility: hidden; // hide until needed
 	// display: none;
-	transition: top 0.25s, background-color 0.25s;
+	transition: 0.25s;
+	// transition: height 0.25s 0.25s; 
 	
 	height: 32px;
 	
